# corrector

./: .gitignore  CMakeLists.txt  README.md  checker.py
src/: CMakeLists.txt  main.cpp  spellchecker.cpp  spellchecker.hpp
test/: CMakeLists.txt  dictionary.txt  sample.txt  test.cpp
